Revert DatabaseManager and related database code to stable working version
- Restored DatabaseManager class to the previously working implementation with HikariCP connection pooling.
- Fixed method signatures for setPlayerBadge to accept (String uuid, String badgeName) as originally designed.
- Ensured proper table creation and connection management consistent with stable release.
- Preserved all other plugin changes and features made after the database layer was last stable.
- This rollback resolves SQL exceptions and method call mismatches encountered with recent changes.
- Ready for further feature development on top of reliable database functionality.

This commit re-establishes a stable foundation for badge persistence and player badge management,
allowing focus on incremental improvements without breaking core database interactions.